messages.properties lesRuches -> Ruches ... et items menu au pluriel

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -171,7 +171,7 @@ changerDeRucher=Changer de rucher
 dateAcquisition=Acquisition
 nbCadresMax=Cadres max
 listeHausses=Liste des hausses
-lesRuches=Ruches
+Ruches=Ruches
 ajoutRetraitHausses=Ajouter/Retirer/Réordonner des hausses
 Pasdehausse=Pas de hausse
 evenementCommentaire=Ajouter un événement Commentaire
@@ -221,7 +221,7 @@ carteIgn=Carte IGN
 carteOsm=Carte OSM
 statistiquesruchers=Statistiques ruchers
 actif=Actif
-lesRuchers=Ruchers
+Ruchers=Ruchers
 contact=Contact
 adresse=Adresse
 ajouterRucher=Ajouter un rucher
@@ -285,7 +285,7 @@ login=Login
 roles=Rôles
 listePersonnes=Liste des personnes
 ajouterPersonne=Ajouter une personne
-lesPersonnes=Personnes
+Personnes=Personnes
 
 # personne/personneForm.html
 emailexiste=Cet email est déjà utilisé
@@ -365,7 +365,7 @@ evenementCadres=Ajouter un événement Cadres
 essaimer=Essaimer
 actionSucre=Sucre
 traitement=Traitement varroa
-lesEssaims=Essaims
+Essaims=Essaims
 essaim=Essaim
 
 # essaim/essaimDispersionForm.html
@@ -386,7 +386,7 @@ clonehaussecreees=Hausse(s) {0} créée(s)
 
 # récoltes
 recolte=Récolte
-lesRecoltes=Récoltes
+Recoltes=Récoltes
 date=Date
 poidsMiel=Poids de miel
 remplissage=Remplissage
@@ -488,7 +488,7 @@ evenementRemplissage=Ajouter un événement Remplissage
 haussenonsupprimeerefrecolte=Cette hausse ne peut être supprimée, elle est référencée dans une récolte
 supprimerevenement=Supprimer cet événement ?
 afficherrucheetc=Afficher/masquer ruche, essaim...
-lesHausses=Hausses
+Hausses=Hausses
 
 # rucher/rucherMeteo.html
 aujourdhui=Aujourd'hui
