--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -171,7 +171,7 @@ changerDeRucher=Move to another apiary
 dateAcquisition=Acquisition
 nbCadresMax=Frames max
 listeHausses=Supers list
-lesRuches=Hives
+Ruches=Hives
 ajoutRetraitHausses=Add/Remove/Reorder supers
 Pasdehausse=No super
 evenementCommentaire=Add a comment event
@@ -221,7 +221,7 @@ carteIgn=IGN Map
 carteOsm=OSM Map
 statistiquesruchers=Apiary statistics
 actif=Active
-lesRuchers=Apiaries
+Ruchers=Apiaries
 contact=Contact
 adresse=Address
 ajouterRucher=Add an apiary
@@ -285,7 +285,7 @@ login=Login
 roles=Roles
 listePersonnes=Persons list
 ajouterPersonne=Add a person
-lesPersonnes=People
+Personnes=People
 
 # personne/personneForm.html
 emailexiste=This email is already used
@@ -365,7 +365,7 @@ evenementCadres=Add a frame event
 essaimer=Swarm
 actionSucre=Sugar
 traitement=Varroa treatment
-lesEssaims=Swarms
+Essaims=Swarms
 essaim=Swarm
 
 # essaim/essaimDispersionForm.html
@@ -386,7 +386,7 @@ clonehaussecreees=Super(s) {0} created
 
 # récoltes
 recolte=Harvest
-lesRecoltes=Harvests
+Recoltes=Harvests
 date=Date
 poidsMiel=Honey weight
 remplissage=Filling
@@ -488,7 +488,7 @@ evenementRemplissage=Add a filling event
 haussenonsupprimeerefrecolte=This super cannot be deleted, it is used in an harvest
 supprimerevenement=Delete this event?
 afficherrucheetc=Show/hide hive, swarm...
-lesHausses=Supers
+Hausses=Supers
 
 # rucher/rucherMeteo.html
 aujourdhui=Today
