spring boot 2.5.0 -> 2.5.1, suppression ressources inutiles

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -447,14 +447,34 @@ ESSAIMDISPERSION=Dispersion de l'essaim
 RUCHEPESEE=Poids de la ruche
 RUCHECADRE=Cadres de la ruche
 
-# Evénements
+# evenement/evenementListe.html
 listeEvenements=Liste des événements
+
+# includeForm.html
 finTraitement=Fin du traitement
+touteperiode=Toute période
+moinsdunan=Moins d'un an
+moinsdunmois=Moins d'un mois
+moinsdunesemaine=Moins d'une semaine
+moinsdunjour=Moins d'un jour
+datesprecises=Dates précises
+
+# evenement/evenementSucreListe.html
 evenementssucre=Événements sucre
+
+# evenement/evenementTraitementListe.html
 evenementstraitement=Événements traitement
+
+# evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Événements poids ruche
+
+# evenement/evenementCadreRucheListe.html
 evenementcadreruche=Événements cadre ruche
+
+# evenement/evenementRemplissageHausseListe.html
 evenementremplissagehausse=Événements remplissage hausse
+
+# evenement/evenementRucheAjoutListe.html
 evenementsrucheajout=Événements ruche ajout rucher
 poidsruche=Poids ruche
 diff=Différence
@@ -462,14 +482,6 @@ diff=Différence
 # ruche/rucheTypesListe.html
 rucheTypes=Types de ruches
 ajouterRucheType=Ajouter un type de ruche
-
-# événements
-touteperiode=Toute période
-moinsdunan=Moins d'un an
-moinsdunmois=Moins d'un mois
-moinsdunesemaine=Moins d'une semaine
-moinsdunjour=Moins d'un jour
-datesprecises=Dates précises
 
 valeur=Valeur
 typeEvenement=Type d'événement
