--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -447,14 +447,34 @@ ESSAIMDISPERSION=Swarm dispersing
 RUCHEPESEE=Hive weight
 RUCHECADRE=Cadres de la ruche
 
-# Evénements
+# evenement/evenementListe.html
 listeEvenements=Events list
+
+# includeForm.html
 finTraitement=End of treatment
+touteperiode=Any period
+moinsdunan=Less than a year
+moinsdunmois=Less than a month
+moinsdunesemaine=Less than a week
+moinsdunjour=Less than a day
+datesprecises=Specific dates
+
+# evenement/evenementSucreListe.html
 evenementssucre=Sugar events
+
+# evenement/evenementTraitementListe.html
 evenementstraitement=Treatment events
+
+# evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Hive weight events
+
+# evenement/evenementCadreRucheListe.html
 evenementcadreruche=Hive frame events
+
+# evenement/evenementRemplissageHausseListe.html
 evenementremplissagehausse=Super filling events
+
+# evenement/evenementRucheAjoutListe.html
 evenementsrucheajout=Hive add in apiary events
 poidsruche=Hive weight
 diff=Difference
@@ -462,14 +482,6 @@ diff=Difference
 # ruche/rucheTypesListe.html
 rucheTypes=Hive types
 ajouterRucheType=Add a hive type
-
-# événements
-touteperiode=Any period
-moinsdunan=Less than a year
-moinsdunmois=Less than a month
-moinsdunesemaine=Less than a week
-moinsdunjour=Less than a day
-datesprecises=Specific dates
 
 valeur=Value
 typeEvenement=Event type
