pagination amélioration message : "tous les" éléments

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -31,7 +31,7 @@ infos=Infos
 cadreruche=Cadre ruche
 rucherucher=Ajout ruche
 tous=Tous
-Toutes=Toutes
+tousLes=tous les
 apiRest=API REST
 preferences=Préférences
 confirmDeploie=Voulez-vous déployer l'application à partir de ses sources sur gitlab ?
