--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -31,7 +31,7 @@ infos=Infos
 cadreruche=Hive frame
 rucherucher=Add a hive
 tous=All
-Toutes=All
+tousLes=all
 apiRest=REST API
 preferences=Preferences
 confirmDeploie=Do you want to deploy the application from its sources on gitlab?
